# SDE

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/analogclock/: CMakeLists.txt
applets/analogclock/include/: AnalogClockWidget.hh
applets/analogclock/source/: AnalogClockWidget.cc  applet.cc
applets/battery/: CMakeLists.txt
applets/battery/include/: BatteryWidget.hh
applets/battery/source/: BatteryWidget.cc  applet.cc
applets/clock/: CMakeLists.txt
applets/clock/include/: ClockWidget.hh
applets/clock/source/: ClockWidget.cc  applet.cc
applets/screenshot/: CMakeLists.txt
applets/screenshot/include/: ScreenShotWidget.hh
applets/screenshot/source/: ScreenShotWidget.cc  applet.cc
applets/spacer/: CMakeLists.txt
applets/spacer/include/: SpacerWidget.hh
applets/spacer/source/: applet.cc
appview/: CMakeLists.txt
appview/include/: AppView.hh  AppWidget.hh
appview/source/: AppView.cc  AppWidget.cc  main.cc
artwork/: CMakeLists.txt
desktop/: CMakeLists.txt
desktop/data/: close.png.orig  desktop.cfg  winlist.png.orig
desktop/include/: Workspace.hh  WorkspaceControl.hh
desktop/source/: Workspace.cc  WorkspaceControl.cc  main.cc
libsde/: CMakeLists.txt
libsde/include/: Applet.hh  AppletWidget.hh  FileUtils.hh  IconWidget.hh  NetWM.hh  PanelWidget.hh  SdeApplication.hh
libsde/source/: Applet.cc  AppletWidget.cc  FileUtils.cc  IconWidget.cc  NetWM.cc  PanelWidget.cc  PanelWidget_setGeometry.cc  SdeApplication.cc
panel/: CMakeLists.txt
panel/include/: LookAndFeelWidget.hh  Panel.hh  PanelControl.hh  PanelMenu.hh
panel/source/: LookAndFeelWidget.cc  Panel.cc  PanelMenu.cc  main.cc
panel/ui/: LookAndFeelWidget.ui
picview/: CMakeLists.txt
picview/include/: PicView.hh
picview/source/: PicView.cc  main.cc
session/: CMakeLists.txt
session/source/: main.cc  openbox-shiokaze-session
settings/: CMakeLists.txt
settings/include/: DesktopMenu.hh  MainWindow.hh  WidgetPushButton.hh
settings/include/DesktopMenu/: ConfigureAppletsWidget.hh
settings/source/: DesktopMenu.cc  MainWindow.cc  main.cc
settings/source/DesktopMenu/: ConfigureAppletsWidget.cc
settings/ui/: MainWindow.ui
settings/ui/DesktopMenu/: ConfigureAppletsWidget.ui
winman/: CMakeLists.txt
winman/include/: WMApplication.hh  XEventLoopThread.hh
winman/source/: WMApplication.cc  XEventLoopThread.cc  main.cc
